# raylib-game-of-life

./: .gitignore  CMakeLists.txt  README.md
src/: config.hpp  gameOfLife.hpp  main.cpp  render.hpp
